--- a/santiago_papeleria_frontend/src/app/layouts/public/public.html
+++ b/santiago_papeleria_frontend/src/app/layouts/public/public.html
@@ -4,4 +4,5 @@
 </div>
 <app-footer></app-footer>
 <app-cart-sidebar></app-cart-sidebar>
+<app-floating-cart></app-floating-cart>
 <app-chatbot></app-chatbot>
